[package]
name = "playlist_localizer"
version = "0.2.0"
authors = ["Saecki <tobiasschmitz2001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.1"
clap = "2.33.0"
id3 = "0.5.0"
mp4ameta = "0.2.0"