[package]
name = "playlist_localizer"
version = "0.3.0"
authors = ["Saecki <tobiasschmitz2001@gmail.com>"]
edition = "2018"

[dependencies]
clap = { git = "https://github.com/clap-rs/clap" }
clap_generate = { git = "https://github.com/clap-rs/clap" }
id3 = "0.6.2"
mp4ameta = "0.9.1"
walkdir = "2.3.1"
