[package]
name = "playlist-localizer"
version = "0.3.0"
authors = ["Saecki <tobiasschmitz2001@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["wrap_help", "cargo"] }
clap_complete = "4.5.23"
id3 = { version = "1.14.0", default-features = false }
mp4ameta = "0.11.0"
walkdir = "2.5.0"
